core/src/main/java/scraper/core/exp/Template.g4
grammar Template;

@header {
    package scraper.core.exp;
}

LEFTP : '{';
RIGHTP : '}';
LEFTA : '[';
LEFTB : ']';
LOOKUP : '@';
ANYCHAR    : ~('{'  | '}'   | '['   | ']'   | '^'   | '@');
ESCAPECHAR : ('\\{' | '\\}' | '\\[' | '\\]' | '\\^' | '\\@');


root :
    | template EOF
    ;

template :
    stringcontent               // string content
    | fmlookup                  // single object fm lookup
    | LEFTP template RIGHTP arraylookup   // array lookup
    | LEFTP template maplookup RIGHTP // map lookup
    | template template         // mixed template
    ;

fmlookup:
    LEFTP template RIGHTP;

arraylookup:
    LEFTA template LEFTB;

maplookup:
    LOOKUP template;

stringcontent :  (ANYCHAR | ESCAPECHAR)+;
